--- a/Day1/alert.rules.yml
+++ b/Day1/alert.rules.yml
@@ -1,11 +1,11 @@
 groups:
-  - name: node_status
+  - name: node_exporter_alerts
     rules:
-      - alert: NodeJobActive
+      - alert: NodeExporterUp
         expr: up{job="node"} == 1
-        for: 15s
+        for: 1m
         labels:
           severity: critical
         annotations:
-          summary: "Le job 'node' est actif"
-          description: "Le job 'node' est plus accessible depuis plus de 15 secondes."
+          summary: "Node Exporter UP (instance={{ $labels.instance }})"
+          description: "Le service node_exporter (instance {{ $labels.instance }}) ne répond depuis plus de 1 min."
